# iot-orienteering-system

./: .gitignore  README.md  run_api.bat  run_app.bat  seed_db.bat
backend/: README.md  pyproject.toml  test.py
backend/db/: models.py  race_repository.py
backend/src/app/: main.py
backend/src/app/core/: config.py  db.py  seed_db.py
backend/src/app/crud/: __init__.py  checkpoint.py  event.py  race.py  runner.py
backend/src/app/dev_utils/: seed_db.py
backend/src/app/models/: checkpoint.py  event.py  race.py  runner.py
backend/src/app/routes/: checkpoints.py  events.py  health.py  races.py  router.py  runners.py
backend/src/app/schemas/: __init__.py  checkpoint.py  event.py  health.py  race.py  runner.py
desktop_ui/: config.py  content_controller.py  main.py  main_window.py
desktop_ui/frames/: checkpoint_edit_frame.py  dashboard_frame.py  header_menu_frame.py  race_creator_frame.py  race_detail_frame.py  race_list_frame.py  runners_frame.py
desktop_ui/services/: checkpoint_service.py  event_service.py  race_service.py  runner_service.py
raspberry/: app_config.py  backend_client.py  checkpoint_id_manager.py  hardware.py  hardware_config.py  main.py  rfid_reader.py
